# cold-bitcoin-wallet

./: Cargo.toml  LICENSE  README.md  params.json  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: lint_and_test.yaml
src/: cli.rs  main.rs  transaction.rs
src/address/: bech32m.rs  mod.rs  taproot.rs
src/key/: mod.rs  types.rs  vault.rs  wallet.rs
src/usecase/: generate.rs  mod.rs  sign.rs
