[package]
name = "cold-bitcoin-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = { version = "4.5.38", features = ["string", "derive"] }
hex = "0.4.3"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["arithmetic"] }
rand = "0.8.5"
rand_core = "0.6.4"
ripemd = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]
rstest = "0.25.0"
